# summary

./: .gitignore  README.md  config-example.yaml  main.py  pyproject.toml
src/ocr_app/clients/: __init__.py  openrouter.py
src/ocr_app/config/: factory.py  loader.py  models.py
src/ocr_app/core/: __init__.py  engine.py  extractor.py
src/ocr_app/core/strategies/: __init__.py  base.py  hierarchical.py  simple.py
src/ocr_app/protocols/: __init__.py  client.py  extractor.py  logger.py
src/ocr_app/utils/: logger.py
